Integracion de servicios test

--- a/src/app/feature/viajes/components/crear-viajes/crear-viajes.component.html
+++ b/src/app/feature/viajes/components/crear-viajes/crear-viajes.component.html
@@ -42,7 +42,7 @@
         </div>
         <div class="form-group col-md-6">
           <label for="inputValorOferta">Valor Oferta</label>
-          <input type="number" class="form-control" id="inputValorOferta" placeholder="Valor Oferta" formControlName="precio">
+          <input type="number" class="form-control" id="inputValorOferta" placeholder="Valor Oferta" formControlName="precios">
         </div>
         <div class="form-group col-md-12">
           <label for="inputCasa">Tipo Casa</label>
