--- a/src/app/feature/viajes/components/listar-viajes/listar-viajes.component.html
+++ b/src/app/feature/viajes/components/listar-viajes/listar-viajes.component.html
@@ -7,6 +7,7 @@
       <div class="card-body">
         <div class="table-responsive">
           <table class="table table-stripped  align-middle">
+            <caption>{{titulo}}</caption>
             <thead class="table-dark">
               <tr>
                 <th *ngFor="let e of encabezadoTabla">{{e}}</th>
